--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -158,6 +158,30 @@ jobs:
 
       - name: Run unit tests
         run: |
+          if [[ "$OSTYPE" == "linux-gnu"* ]]; then
+            # Set Zig as the C/C++ compiler for CGO during tests
+            if [[ "${{ runner.arch }}" == "X64" ]]; then
+              ZIG_TARGET="x86_64-linux-gnu"
+            elif [[ "${{ runner.arch }}" == "ARM64" ]]; then
+              ZIG_TARGET="aarch64-linux-gnu"
+            fi
+            export CC="zig cc -target $ZIG_TARGET"
+            export CXX="zig c++ -target $ZIG_TARGET"
+            export CGO_LDFLAGS="-L$LIBDIR"
+
+            ARCH=$(uname -m)
+            if [[ "$ARCH" == "x86_64" ]]; then
+                ZIG_TARGET="x86_64-linux-gnu"
+                LIBDIR="/usr/lib/x86_64-linux-gnu"
+            elif [[ "$ARCH" == "aarch64" ]] || [[ "$ARCH" == "arm64" ]]; then
+                ZIG_TARGET="aarch64-linux-gnu"
+                LIBDIR="/usr/lib/aarch64-linux-gnu"
+            else
+                echo "Unsupported architecture: $ARCH"
+                exit 1
+            fi
+          fi
+
           if [ "${{ matrix.job_name }}" == "linux-fuse2" ]; then
             go test -v -timeout=1h ./... --tags=unittest,azurite
           else
