--- a/setup/advancedConfig.yaml
+++ b/setup/advancedConfig.yaml
@@ -3,7 +3,7 @@
 #   1. All boolean configs (true|false config) (except ignore-open-flags, virtual-directory, sync-to-flush) are set to 'false' by default.
 #      No need to mention them in your config file unless you are setting them to true.
 #   2. 'loopbackfs' is purely for testing and shall not be used in production configuration.
-#   3. 'stream' and 'file_cache' can not co-exist and config file shall have only one of them based on your use case.
+#   3. 'stream', 'block-cache', and 'file_cache' can not co-exist and config file shall have only one of them based on your use case.
 #   4. By default log level is set to 'log_warning' level and are redirected to syslog.
 #      Either use 'base' logging or syslog filters to redirect logs to separate file.
 #      To install syslog filter follow below steps:
@@ -52,6 +52,7 @@ logging:
 # Pipeline configuration. Choose components to be engaged. The order below is the priority order that needs to be followed.
 components:
   - libfuse
+  - entry_cache
   - block_cache
   - file_cache
   - attr_cache
@@ -81,6 +82,10 @@ stream:
   max-buffers: <total number of buffers to store blocks in. Default - 0>
   buffer-size-mb: <size for each buffer. Default - 0 MB>
   file-caching: <read/write mode file level caching or handle level caching. Default - false (handle level caching ON)>
+
+# Entry Cache configuration
+entry_cache:
+  timeout-sec: <cache eviction timeout (in sec). Default - 30 sec>
 
 # Block cache related configuration. Block cache is only supported on Linux.
 block_cache:
@@ -132,7 +137,7 @@ azstorage:
   type: block|adls <type of storage account to be connected. Default - block>
   account-name: <name of the storage account>
   container: <name of the storage container to be mounted>
-  endpoint: <storage account endpoint (example - https://account-name.blob.core.windows.net)>
+  endpoint: <specify this parameter only if storage account is behind a private endpoint>
   mode: key|sas|spn|msi|azcli <kind of authentication to be used>
   account-key: <storage account key>
   # OR
@@ -172,6 +177,7 @@ azstorage:
   cpk-enabled: true|false <enable client provided key encryption>
   cpk-encryption-key: <customer provided base64-encoded AES-256 encryption key value>
   cpk-encryption-key-sha256: <customer provided base64-encoded sha256 of the encryption key>
+  preserve-acl: true|false <preserve ACLs and Permissions set on file during updates>
 
 # S3 storage configuration
 s3storage:
