--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Install libfuse on Linux
         shell: bash
         run: |
-          sudo apt-get install fuse3 ${{ matrix.fuselib }}
+          sudo apt-get update && sudo apt-get install fuse3 ${{ matrix.fuselib }}
 
       - name: Build
         run: |
